# hse-user-data-framework

./: Python_Code  README.md
mywebsocket/: main.cpp  process.cpp  process.hpp  ws.cpp  ws.hpp
proto/: CMakeLists.txt  Makefile  server.cpp
release/: CMakeLists.txt  main.cpp  process.cpp  process.hpp
testing/: net.cpp  net.hpp  test.cpp
